test/fail/undefined1.min
program
start
    a := 1;
end
